# CMakeTest

./: .gitignore  CMakeLists.txt  Vagrantfile  readme.md
includes/: object.hpp
src/: main.cpp
